k8s/prod/common/sscs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sscs
  labels:
    slackChannel: sscs-tech
    hmcts.github.com/envInjector: enabled
---
