k8s/prod/common/sscs/sscs-track-appeal-redirect-ingress.yaml
# this is to apply permanent redirect on www.track-benefit-appeal.service.gov.uk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: sscs-trackbenefitredirect@kubernetescrd
  name: sscs-track-appeal-redirect-ingress
  namespace: sscs
spec:
  rules:
    - host: www.track-benefit-appeal.service.gov.uk
      http:
        paths:
          - backend:
              service:
                name: sscs-cor-frontend-nodejs
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: trackbenefitredirect
  namespace: sscs
spec:
  redirectRegex:
    permanent: true
    regex: ^http://www.track-benefit-appeal.service.gov.uk/evidence/(.*)|https://www.track-benefit-appeal.service.gov.uk/trackyourappeal/(.*)|https://www.track-benefit-appeal.service.gov.uk/expenses/(.*)|https://www.track-benefit-appeal.service.gov.uk/abouthearing/(.*)|https://www.track-benefit-appeal.service.gov.uk/validate-surname/(.*)/evidence|https://www.track-benefit-appeal.service.gov.uk/validate-surname/(.*)/trackyourappeal|https://www.track-benefit-appeal.service.gov.uk/validate-surname/ [...]
    replacement: http://www.manage.appeal-benefit-decision.service.gov.uk/validate-surname/:tya/trackyourappeal?tya=${1}${2}${3}${4}${5}${6}${7}${8}
